--- a/app/templates/blog_list.html
+++ b/app/templates/blog_list.html
@@ -5,7 +5,29 @@
 {% block content %}
 <div class="row">
     <div class="col-md-12">
-        <h1 class="mb-4">Blog Posts</h1>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h1>Blog Posts</h1>
+            <form action="{% url 'blog_list' %}" method="GET" class="d-flex gap-2">
+                <div class="input-group" style="max-width: 300px;">
+                    <input type="text" name="search" class="form-control" placeholder="Search posts..." 
+                           value="{{ search_query }}" aria-label="Search blog posts">
+                    <button class="btn btn-primary" type="submit">
+                        <i class="bi bi-search"></i>
+                    </button>
+                    {% if search_query %}
+                        <a href="{% url 'blog_list' %}" class="btn btn-outline-secondary" title="Clear search">
+                            <i class="bi bi-x-lg"></i>
+                        </a>
+                    {% endif %}
+                </div>
+            </form>
+        </div>
+        
+        {% if search_query %}
+            <div class="alert alert-info mb-4">
+                Showing results for "{{ search_query }}"
+            </div>
+        {% endif %}
         
         {% for post in posts %}
             <div class="card mb-4">
@@ -17,11 +39,18 @@
                         Posted by <a href="{% url 'blogger_detail' post.author.id %}" class="text-decoration-none">{{ post.author.username }}</a>
                         on {{ post.created_at|date:"F j, Y" }}
                     </p>
+                    {% if search_query %}
+                        <p class="card-text">{{ post.content|truncatewords:50 }}</p>
+                    {% endif %}
                 </div>
             </div>
         {% empty %}
             <div class="alert alert-info">
-                No blog posts available yet.
+                {% if search_query %}
+                    No blog posts found matching your search.
+                {% else %}
+                    No blog posts available yet.
+                {% endif %}
             </div>
         {% endfor %}
 
@@ -30,7 +59,7 @@
                 <ul class="pagination justify-content-center">
                     {% if posts.has_previous %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ posts.previous_page_number }}">Previous</a>
+                            <a class="page-link" href="?page={{ posts.previous_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}">Previous</a>
                         </li>
                     {% endif %}
 
@@ -41,14 +70,14 @@
                             </li>
                         {% else %}
                             <li class="page-item">
-                                <a class="page-link" href="?page={{ num }}">{{ num }}</a>
+                                <a class="page-link" href="?page={{ num }}{% if search_query %}&search={{ search_query }}{% endif %}">{{ num }}</a>
                             </li>
                         {% endif %}
                     {% endfor %}
 
                     {% if posts.has_next %}
                         <li class="page-item">
-                            <a class="page-link" href="?page={{ posts.next_page_number }}">Next</a>
+                            <a class="page-link" href="?page={{ posts.next_page_number }}{% if search_query %}&search={{ search_query }}{% endif %}">Next</a>
                         </li>
                     {% endif %}
                 </ul>
